# stb_sim

./: .gitignore  CMakeLists.txt  config.ini  cross_toolchain.cmake
doc/: CMakeLists.txt  Doxyfile.in  mainpage.md
inc/: controller.h  input.h  model.h  view.h  zapper_fsm.h  zapper_gui_gl.h
inc/afb/: afb.h  opengl.h  zapper_gui.h
inc/controller/: norm_codes.h
inc/input/: keyboard.h  keyboard_codes.h  remote.h  remote_codes.h
inc/model/: fake_model.h  real_model.h  service_list.h  services_table.h
inc/parsers/: init_config_parser.h  parser_utils.h  pat_parser.h  pmt_parser.h  sdt_parser.h
inc/view/: console.h  dfb_view.h  gl_view.h
src/: CMakeLists.txt  keyboard.c  main.c  zapper_fsm.c  zapper_fsm_states.c  zapper_gui_gl.c
src/afb/: CMakeLists.txt  opengl.c  zapper_gui_gl.c
src/controller/: CMakeLists.txt  controller.c  zapper_fsm.c  zapper_fsm_states.c
src/input/: CMakeLists.txt  keyboard.c  remote.c
src/model/: CMakeLists.txt  fake_model.c  model.c  real_model.c  service_list.c  service_list.h
src/parsers/: CMakeLists.txt  init_config_parser.c  parser_utils.c  pat_parser.c  pmt_parser.c  sdt_parser.c
src/view/: CMakeLists.txt  console.c  dfb_view  dfb_view.c  gl_view.c  makefile
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt  test_afb_gl_view.c  test_cli_view.c  test_ctrl_flow.c  test_dfb_view.c  test_init_config_parser.c  test_kb_input.c  test_model_and_dfb_view.c  test_model_fake_and_gl_view.c  test_rc_input.c
tests/unit/: CMakeLists.txt  test_runner.c
tests/unit/data/: pat_test_set_1.pat
utils/pat_gen/: pat_gen.py
utils/pat_gen/.ropeproject/: globalnames
